<resources>
    <string name="app_name">Snake</string>
    <string name="tap_to_play">Tap To Play!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="exit">Exit</string>
    <string name="create_account">Create Account</string>
    <string name="cancel_create_account">Cancel</string>
    <string name="play_game">Play!</string>
    <string name="back_menu">Back</string>
    <string name="sound">Sound</string>
    <string name="account_not_found">Account not Registered</string>
    <string name="account_already_exists">Account Already Exists</string>
    <string name="account_created">Account Created</string>
    <string name="account_created_error">Failed Create Account</string>
</resources>