<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context="laboratorio.programacion.login.RegisterActivity"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@android:color/black">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_main"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="45dp"
        android:layout_weight="0"
        android:contentDescription="Imagen Principal snake-apple"
        app:srcCompat="@drawable/mainlogo" />

    <EditText
        android:id="@+id/userRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="40dp"
        android:layout_weight="0"
        android:background="@android:color/white"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:paddingLeft="15dp" />

    <EditText
        android:id="@+id/passRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_weight="0"
        android:background="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="15dp" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_weight="0"
        android:background="#FF0000"
        android:text="@string/create_account"
        android:textColor="#ffffff"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="60dp"
        android:layout_weight="0"
        android:background="#FF0000"
        android:text="@string/cancel_create_account"
        android:textColor="#ffffff"
        android:textSize="20dp" />

</LinearLayout>

</ScrollView>


